<resources>
    <string name="app_name">Whisper</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Login -->
    <string name="label_not_member">Not a member? Register now.</string>
    <string name="message_timeout">Connection error. Try again later.</string>
    <string name="message_no_internet">Internet connection error.</string>
    <string name="message_generic_bad_request">Try again later.</string>
    <string name="message_sign_in_loading">Signing you in…</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_add_contact">Add Contact</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_logout">Logout</string>
    <string name="add_contact_hint">New contact name</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="search_contact">Search for people</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="s_spaces">"    &#x200b;    &#x200b;    &#x200b;"</string>
    <string name="m_spaces">"    &#x200b;    &#x200b;    &#x200b;    &#x200b;"</string>
    <string name="message_you_prefix">"You: "</string>
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="label_login">Login</string>
    <string name="placeholder_username">Username</string>
    <string name="placeholder_password">Password</string>
    <string name="label_register">Register</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_send_message">Send a message</string>
    <string name="label_empty_chatroom_screen">Tap someone to chat with!</string>
    <string name="user_name_empty">N/A</string>
    <string name="title_notifications">Notifications</string>
    <string name="description_notifications">Allow Whisper to notify you for new messages</string>
    <string name="description_username">Username</string>
    <string name="description_name">Full Name</string>
    <string name="message_no_results">No results</string>
    <string name="prefix_contact_item_user">" (You)"</string>
    <string name="error_search_too_short">Search must be at least 2 characters</string>
    <string name="error_connection">Connection error</string>

</resources>
