<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_light_turquoise">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_white"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_margin" />

        <TextView
            android:id="@+id/tv_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Invalid username or password"
            android:drawableLeft="@drawable/error"
            android:drawableStart="@drawable/error"
            style="@style/ErrorTextView"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/small_margin" />

        <EditText
            android:id="@+id/edit_username"
            android:hint="@string/placeholder_username"
            android:inputType="textFilter"
            style="@style/LoginEditText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_margin" />

        <EditText
            android:id="@+id/edit_password"
            android:inputType="textPassword"
            android:hint="@string/placeholder_password"
            style="@style/LoginEditText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_margin" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            style="@style/LoginButton"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/xlarge_margin" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_normal"
            android:text="@string/label_not_member"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/xlarge_margin" />

    </LinearLayout>

</ScrollView>
